--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,108 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Real-Time Dashboard</title>
+    <title>Kafka Symbol Filter Demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Crypto Real-Time Analytics</span>
+            <span class="navbar-brand mb-0 h1">Kafka Streams Symbol Filter Demo</span>
             <span class="navbar-text" id="connection-status">
                 <span class="badge bg-secondary">Disconnected</span>
             </span>
         </div>
     </nav>
 
-    <div class="container-fluid mt-3">
-        <div class="row mb-3">
-            <div class="col-md-4">
-                <select id="symbol-select" class="form-select">
-                    <option value="BTCUSDT">BTC/USDT</option>
-                    <option value="ETHUSDT">ETH/USDT</option>
-                    <option value="BNBUSDT">BNB/USDT</option>
-                </select>
-            </div>
-        </div>
-
+    <div class="container-fluid mt-4">
         <div class="row">
-            <!-- Price Chart -->
-            <div class="col-lg-8 mb-4">
+            <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Price Chart</h5>
+                        <div class="row align-items-center">
+                            <div class="col-md-6">
+                                <h5 class="card-title mb-0">Real-Time Filtered Trades</h5>
+                            </div>
+                            <div class="col-md-6">
+                                <select id="symbol-select" class="form-select">
+                                    <option value="BTCUSDT">BTC/USDT</option>
+                                    <option value="ETHUSDT">ETH/USDT</option>
+                                    <option value="BNBUSDT">BNB/USDT</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
                     <div class="card-body">
-                        <canvas id="price-chart"></canvas>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Current Stats -->
-            <div class="col-lg-4 mb-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="card-title mb-0">Current Stats</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="stat-item">
-                            <span class="stat-label">Price:</span>
-                            <span class="stat-value" id="current-price">-</span>
+                        <div class="row mb-3">
+                            <div class="col-md-6">
+                                <div class="text-muted">Trade Count: <span id="trade-count" class="badge bg-primary">0</span></div>
+                            </div>
+                            <div class="col-md-6 text-end">
+                                <div class="text-muted">Last Update: <span id="last-update">-</span></div>
+                            </div>
                         </div>
-                        <div class="stat-item">
-                            <span class="stat-label">24h Change:</span>
-                            <span class="stat-value" id="price-change">-</span>
+                        <div class="table-responsive" style="height: 500px; overflow-y: auto;">
+                            <table class="table table-striped table-hover">
+                                <thead class="sticky-top bg-white">
+                                    <tr>
+                                        <th>Time</th>
+                                        <th>Price</th>
+                                        <th>Quantity</th>
+                                        <th>Volume (USDT)</th>
+                                        <th>Side</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="trades-table">
+                                    <tr>
+                                        <td colspan="5" class="text-center text-muted">Waiting for trades...</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="stat-item">
-                            <span class="stat-label">Volume:</span>
-                            <span class="stat-value" id="volume">-</span>
-                        </div>
-                        <div class="stat-item">
-                            <span class="stat-label">RSI:</span>
-                            <span class="stat-value" id="rsi">-</span>
-                        </div>
-                        <div class="stat-item">
-                            <span class="stat-label">Trend:</span>
-                            <span class="stat-value" id="trend">-</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <!-- Volume Analysis -->
-            <div class="col-lg-6 mb-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="card-title mb-0">Volume Analysis</h5>
-                    </div>
-                    <div class="card-body">
-                        <canvas id="volume-chart"></canvas>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Alerts -->
-            <div class="col-lg-6 mb-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="card-title mb-0">Real-Time Alerts</h5>
-                    </div>
-                    <div class="card-body" style="height: 300px; overflow-y: auto;">
-                        <div id="alerts-container"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1.5.2/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.0/dist/chartjs-adapter-moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
